--- a/config.toml
+++ b/config.toml
@@ -96,7 +96,7 @@ theme = "LoveIt"
     # 网站创立年份
     since = 2010
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
-    icp = ""
+    icp = ''
     # 许可协议信息 (支持 HTML 格式)
     license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
 
@@ -387,6 +387,8 @@ theme = "LoveIt"
         # 位于 "assets/"
         # 或者
         # someJavascript = "https://cdn.example.com/some.js"
+        walineJavascript= "https://cdn.jsdelivr.net/npm/@waline/client"
+        runJavascript= "js/run.js"
     #  页面 SEO 配置
     [params.page.seo]
       # 图片 URL
