--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: registry.gitlab.com/pages/hugo/hugo_extended:latest
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
+  GIT_DEPTH: 1
 
 测试构建:
   script:
@@ -13,6 +14,7 @@ pages:
   tags:
     - tsn
   script:
+    - git fetch
     - hugo --gc --minify --enableGitInfo
   artifacts:
     paths:
