--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,7 +3,7 @@ name: Github pages 发布
 on:
   push:
     branches:
-      - main  # Set a branch to deploy
+      - main
   pull_request:
   workflow_dispatch:
 
@@ -14,8 +14,8 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v3
         with:
-          submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          submodules: recursive
+          fetch-depth: 0
 
       - name: 安装Hugo
         uses: peaceiris/actions-hugo@v2
