ci(gitlab): 添加环境信息

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,9 @@ variables:
 pages:
   tags:
     - tsn
+  environment:
+    name: staging
+    url: https://i.tossp.com
   script:
     - git fetch
     - hugo --gc --minify --enableGitInfo
