--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@ theme = "LoveIt"
   [params.footer]
     enable = true
     #  自定义内容 (支持 HTML 格式)
-    custom = '<script async defer data-website-id="6d0226f8-36d3-4683-b437-60882d15e651" src="https://stats-web.tossp.com/umami.js"></script>'
+    custom = '<script async defer data-website-id="6d0226f8-36d3-4683-b437-60882d15e651" src="https://stats-web.tossp.com/stats.js"></script>'
     #  是否显示 Hugo 和主题信息
     hugo = false
     #  是否显示版权信息
